--- a/celula/src/pages/dashboard/dashboard.css
+++ b/celula/src/pages/dashboard/dashboard.css
@@ -4,6 +4,8 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: #757575;
+
 }
 
 .containerdash {
@@ -15,12 +17,35 @@ body {
   justify-content: space-between;
   align-items: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+  background-color: #757575;
 
+}
+.containerCard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin: 20px;
+}
+.card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  gap: 10px;
+  min-width: 300px;
+  max-width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+.card p {
+    margin-top: 10px;
+}
 .barra {
   width: 300px;
   background-color: rgb(80, 78, 76);
-  height: 100%;
+  height: 100vh;
+
   display: flex;
   flex-wrap: wrap;
   border-radius: 10px;
@@ -86,10 +111,11 @@ body {
 }
 .conteudo {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  margin-top: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
-background-color: #757575;
+  background-color: #757575;
   gap: 10px;
 }
