--- a/celula/src/pages/dashboard/dashboard.css
+++ b/celula/src/pages/dashboard/dashboard.css
@@ -5,7 +5,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: #757575;
-
 }
 
 .containerdash {
@@ -18,7 +17,9 @@ body {
   align-items: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #757575;
-
+}
+.buttonCard {
+  width: 100%;
 }
 .containerCard {
   display: flex;
@@ -40,12 +41,12 @@ body {
   transition: transform 0.2s;
 }
 .card p {
-    margin-top: 10px;
-    color: rgba(255, 255, 255, 0.588);
+  margin-top: 10px;
+  color: rgba(255, 255, 255, 0.588);
 }
 .card h3 {
-    text-transform: capitalize;
-    color: rgba(255, 255, 255, 0.726);
+  text-transform: capitalize;
+  color: rgba(255, 255, 255, 0.726);
 }
 .barra {
   width: 300px;
