--- a/celula/src/pages/dashboard/dashboard.css
+++ b/celula/src/pages/dashboard/dashboard.css
@@ -59,7 +59,7 @@ body {
 }
 .img {
   width: 300px;
-  height: 300px;
+  height: max-content;
   background-color: rgb(80, 78, 76);
   display: flex;
   justify-content: center;
@@ -108,6 +108,35 @@ body {
   color: white;
   margin-left: 20px;
 }
+.cad button {
+  text-transform: none;
+  width: 100%;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 20px;
+}
+.img h1 {
+  text-transform: none;
+  color: white;
+  font-size: 25px;
+  background-color: #757575;
+  width: 95%;
+  margin: 0 auto;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+.cad {
+  background-color: red;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px 0;
+}
 .title {
   background-color: antiquewhite;
   width: 100%;
@@ -135,4 +164,9 @@ body {
 .buttons button {
   background-color: aliceblue;
   text-transform: none;
+  color: black;
+}
+.buttons button:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
 }
