--- a/celula/src/pages/reuniao/reuniao.css
+++ b/celula/src/pages/reuniao/reuniao.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 10px 10px 10px;
 }
 .container {
   margin: 0;
@@ -14,8 +13,6 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -31,4 +28,15 @@
   width: 300px;
   color: azure;
   border-color: azure;
+}
+.listti {
+  width: 1000px;
+  height: 70px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  color: white;
+
 }
